// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when applied with \`include\` option matches snapshot for a single \`include\` value: assets 1`] = `
Array [
  "1.async.js.gz?ver=1ea6f97e389bd951fd50",
  "1.async.js?ver=1ea6f97e389bd951fd50",
  "5b1f36bc41ab31f5b801d48ba1d65781.png",
  "96621d3c37d96ad3bf792fcc848d912f.svg",
  "js.js.gz?var=1ea6f97e389bd951fd50",
  "js.js?var=1ea6f97e389bd951fd50",
]
`;

exports[`when applied with \`include\` option matches snapshot for a single \`include\` value: errors 1`] = `Array []`;

exports[`when applied with \`include\` option matches snapshot for a single \`include\` value: warnings 1`] = `Array []`;

exports[`when applied with \`include\` option matches snapshot for multiple \`include\` values: assets 1`] = `
Array [
  "1.async.js.gz?ver=1ea6f97e389bd951fd50",
  "1.async.js?ver=1ea6f97e389bd951fd50",
  "5b1f36bc41ab31f5b801d48ba1d65781.png",
  "96621d3c37d96ad3bf792fcc848d912f.svg",
  "96621d3c37d96ad3bf792fcc848d912f.svg.gz",
  "js.js.gz?var=1ea6f97e389bd951fd50",
  "js.js?var=1ea6f97e389bd951fd50",
]
`;

exports[`when applied with \`include\` option matches snapshot for multiple \`include\` values: errors 1`] = `Array []`;

exports[`when applied with \`include\` option matches snapshot for multiple \`include\` values: warnings 1`] = `Array []`;
